docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/header/_responsive-menu.scss
.branding__menu .block-alshaya-search {
  @include breakpoint($upto-tablet) {
    display: none;
  }
}

header {
  .region__header .block-views-exposed-filter-blocksearch-page {
    top: 0.5rem;

    @include breakpoint($upto-desktop) {
      z-index: 8;
      bottom: auto;
      top: 5.3125rem;
      position: fixed;
    }

    html[lang=ar] & {
      @include breakpoint($upto-tablet) {
        top: 5.3rem;
      }
    }
  }

  .block-cart-mini-block .cart-link {
    @include breakpoint($upto-desktop) {
      display: block;
      margin: 0;
      text-align: center;
      width: 100%;
      height: 2.5rem;
      background-size: 2.125rem;

      html[lang="ar"] & {
        margin-top: 0;
      }
    }

    @include breakpoint($upto-tablet) {
      height: 2.625rem;
    }
  }

  .c-header__region {
    @include breakpoint($upto-desktop) {
      margin: 0;
      padding-bottom: 0;
      height: auto;

      html[lang=ar] & {
        height: auto;
      }
    }

    @include breakpoint($desktop) {
      padding-top: 2rem;

      html[lang=ar] & {
        padding-top: 1.5rem;
        padding-bottom: 2.5rem;
      }
    }
  }

  .views-exposed-form-search-page {
    @include breakpoint($upto-desktop) {
      width: 100%;
      border: 0.5rem solid $header_search_border_mobile;
    }
  }

  .block-cart-mini-block .cart-link {
    @include breakpoint($upto-desktop) {
      background-position: center;
    }
  }

  #mini-cart-wrapper {
    @include breakpoint($upto-desktop) {
      float: none;
      margin: 0;
    }
  }
}

@include breakpoint($upto-desktop) {
  .logged-in .mobile--close,
  .mobile--close {
    top: 3.7rem;
  }

  .logged-in .toggle--sign,
  .toggle--sign {
    top: 2.8125rem;

    @include breakpoint($only-mobile) {
      top: 2.75rem;
    }
  }

  .main--menu {
    top: 5.625rem;

    ul {
      width: 100%;
    }
  }

  .main--menu ul.menu--one__list,
  .c-menu-secondary {
    top: 5.7rem;

    a {
      text-transform: uppercase;
      font-size: 0.875rem;
    }
  }

  .menu__list-item,
  .back--link {
    text-transform: uppercase;
    font-size: 0.875rem;
    font-family: $vs-regular;

    a {
      padding-bottom: 0.875rem;
    }
  }

  .menu__in::after {
    font-size: 1.5rem;
  }

  .menu__back {
    height: 0.8125rem;

    html[lang="ar"] & {
      transform: rotate(180deg);
    }
  }

  .toggle--sign {
    .one,
    .one.shop {
      text-transform: uppercase;
      padding-top: 1.1rem;
      padding-bottom: 1.1rem;
      font-size: 0.75rem;
    }

    .one {
      width: 50.5%;
      padding: 1.1rem 0.5rem;
    }

    .one.shop {
      width: 49.5%;
    }
  }

  .branding__menu {
    position: static;
    box-shadow: none;
  }

  body {
    margin-top: 5.4rem;
  }

  body {
    html[lang="ar"] & {
      margin-top: 5.4rem;
    }
  }

  .block-alshaya-super-category-menu {
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 7;
  }

  .menu--mobile-navigation {
    width: 75%;
    top: 2.8125rem;
    background-color: $header_mobile_menu_bg;
  }

  #block-cartminiblock {
    position: fixed;
    display: block;
    z-index: 3;
  }

  .block-cart-mini-block {
    width: 25%;
    #{$right}: 0;
    top: 2.8125rem;
    z-index: 1;
    text-align: center;
    background-color: $header_mobile_menu_bg;
  }

  .menu--active .mobile--close {
    #{$left}: 16.875rem;
    top: 2.8125rem;
    height: 2.8125rem;
    width: 2.8125rem;
    padding-top: 0.5rem;

    @include breakpoint($only-mobile) {
      top: 2.75rem;
    }
  }

  .c-menu-secondary,
  .toggle--sign,
  .main--menu ul.menu--one__list {
    width: 16.875rem;
  }

  .c-my-account-nav {
    width: 16.875rem !important;
  }
}

.branding__menu {
  .block-alshaya-search {
    @include breakpoint($only-tablet) {
      display: none !important;

      &.show-search {
        display: block !important;
      }
    }
  }

  .c-header__region .block-system-branding-block {
    @include breakpoint($upto-desktop) {
      display: none;
    }

    .site-brand-home {
      img {
        @include breakpoint($desktop) {
          max-width: 21.875rem;
          width: auto;
          margin: auto;
          text-align: center;
        }
      }
    }
  }

  &.navbar-fixed-top {
    @include breakpoint($upto-desktop) {
      z-index: 6;
    }
  }

  &.show-overlay::before {
    @include breakpoint($upto-desktop) {
      content: none;
    }
  }
}

.c-my-account-nav {
  @include breakpoint($upto-desktop) {
    top: 5.7rem;
  }

  h3 {
    @include breakpoint($upto-desktop) {
      text-transform: uppercase;
      font-family: $vs-bold;
    }
  }

  li::after {
    @include breakpoint($upto-desktop) {
      font-size: 1.5rem;
      #{$right}: -0.1875rem;
    }
  }
}

.mobile--overlay {
  .menu--mobile-navigation {
    background-color: transparent;
  }

  .c-menu-primary .region__menu-primary .menu--mobile-navigation {
    border-bottom-color: transparent;
  }
}

.block-cart-mini-block {
  @include breakpoint($upto-desktop) {
    border-bottom: 2px solid $header_mobile_border;
  }
}

