CORE-4349: Fixing background visible behind the menu on scroll.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/header/_responsive-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/header/_responsive-menu.scss
@@ -184,6 +184,10 @@ header {
     width: 75%;
     top: 2.8125rem;
     background-color: $header_mobile_menu_bg;
+
+    @include breakpoint($only-mobile) {
+      top: 2.75rem;
+    }
   }
 
   #block-cartminiblock {
@@ -199,6 +203,10 @@ header {
     z-index: 1;
     text-align: center;
     background-color: $header_mobile_menu_bg;
+
+    @include breakpoint($only-mobile) {
+      top: 2.75rem;
+    }
   }
 
   .menu--active .mobile--close {
